# matrix-to-discourse

./: .gitignore  .pre-commit-config.yaml  BUILD.md  CONTRIBUTING.md  MatrixToDiscourseBot.py  README.md  ROADMAP.md  ai_integration.py  backup-bot.py  base-config.yaml  base-config.yml  bot.py  build_plugin.py  config.yaml  discourse_api.py  matrix-to-discourse-urls.mbp  matrix-to-discourse.mbp  maubot.db-shm  maubot.db-wal  maubot.yaml  maubot_lessonslearned.md  package_plugin.py  plugin-test.mbp  plugin.mbp  pyproject.toml  requirements.txt  scrapy.cfg  test_import.py  test_script.py  url_handler.py
.github/workflows/: ci.yml
matrix_to_discourse/: ai_integration.py  bot.py  url_handler.py
plugin/: MatrixToDiscourseBot.py  __init__.py  ai_integration.py  base-config.yaml  config.py  db.py  discourse_api.py  main.py  maubot.yaml  plugin.py  rate_limiter.py  requirements.txt  temp-del.yml  urlpreview_ext_json.py  urlpreview_utils.py  utils.py
plugin/tests/: test_bot.py
test_plugin/: bot.py  maubot.yaml  requirements.txt
tests/: test.bot.py  test_bot.py
